# ComputationalGeometry

./: .gitmodules  CMakeLists.txt  main.cpp
DCEL/: CMakeLists.txt  dcel.cpp  dcel.h  dcelIO.cpp  dcelIO.h  edge.cpp  event_point.cpp  weak_dcel.cpp  weak_dcel.h
DoublyConnectedEdgeList/: dcel.h
GeometryPrimitiveTest/: CMakeLists.txt
Point/: CMakeLists.txt  line.h  line_seg_intersection.cpp  line_seg_intersection.h  point.cpp  point.h  point2D.cpp  point2D.h  segment.cpp  segment.h  util.cpp  util.h  vector.h
include/: line_seg_intersection.h
src/: dcel.cpp  dcelIO.cpp  line_seg_intersection.cpp
